# bat_monitor

./: .clang-format  .gitignore  AGENTS.md  CMakeLists.txt  sdkconfig  sdkconfig.defaults
main/: CMakeLists.txt  RtosTask.h  TaskADC.cpp  TaskADC.h  TaskConfig.cpp  TaskConfig.h  TaskServer.cpp  TaskServer.h  main.c  main.cpp  unittest.h
tests/: CMakeLists.txt  LoggerTests.cpp  TaskWIFITests.cpp
tests/mocks/: logger.cpp
